# decent-ra-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup-linux.sh  setup-win.bat  ubuntu-install-sgx-driver.sh  ubuntu-install-sgx-psw.sh  ubuntu-install-sgx-sdk.sh
cmake/: DownloadSgxSdk.cmake  EnclavePlatformNonEnclave.cmake  EnclavePlatformSgx.cmake  FindSgxSdk.cmake  SetupSgxSdkLib.cmake  SetupSgxSdkLibs.cmake
libs/Intel_SGX/: CMakeLists.txt  sgxssl.cmake
sources/DecentApi/Common/: ArrayPtrAndSize.h  Common.h  Exceptions.h  GeneralKeyTypes.cpp  GeneralKeyTypes.h  ModuleConfigInternal.h  RuntimeException.h  general_key_types.h  make_unique.h  structs.h
sources/DecentApi/CommonApp/: Common.cpp  Common.h
sources/DecentApi/DecentAppApp/: DecentApp.cpp  DecentApp.h  DecentAppConfig.cpp  DecentAppConfig.h  edl_decent_ra_app.h
sources/DecentApi/DecentAppEnclave/: AppCertContainer.cpp  AppCertContainer.h  AppStates.h  AppStatesSingleton.h  DefaultStatesConfig.h  SgxDecentApp.cpp
sources/DecentApi/DecentServerApp/: DecentServer.cpp  DecentServer.h  ServerConfigManager.cpp  ServerConfigManager.h  edl_decent_ra_server.h
sources/DecentApi/DecentServerEnclave/: AppWhiteListsManager.cpp  AppWhiteListsManager.h  DefaultStatesConfig.h  RaProcessor.cpp  RaProcessor.h  SelfRaReportGenerator.cpp  SelfRaReportGenerator.h  ServerCertContainer.cpp  ServerCertContainer.h  ServerStates.h  ServerStatesSingleton.h  SgxDecentServer.cpp  edl_decent_ra_server.h
sources/DecentApi/EDL/: decent_file_system.edl  decent_net.edl  decent_net_swl.edl  decent_ra_app.edl  decent_ra_server.edl  decent_tools_swl.edl  decentralized.edl  sgx_ra_client.edl  sgx_ra_sp.edl
sources/DecentApi/config-headers/: DecentApiMbedtlsMutex.hpp  DecentApiMbedtlsRbg.hpp
sources/DecentApp_app/: DecentVoteApp.cpp  DecentVoteApp.h  Main.cpp  VoteAppMessage.cpp  VoteAppMessage.h  VoteAppSession.cpp  VoteAppSession.h  WhiteList.cpp
sources/DecentApp_enclave/: DecentStates.cpp  Enclave.edl  EnclaveMain.cpp  ModuleConfig.h  WhiteList.cpp
sources/DecentServer_app/: DecentStates.cpp  ExampleEnclave.cpp  ExampleEnclave.h  Main.cpp  WhiteList.cpp
sources/DecentServer_enclave/: Enclave.edl  ModuleConfig.h  WhiteList.cpp
sources/RemoteAttestation_app/: DecentSGXEnclaveImp.cpp  DecentSGXEnclaveImp.h  ExampleEnclave.cpp  ExampleEnclave.h  Main.cpp  ModuleConfig.h  SimpleMessage.cpp  SimpleMessage.h
sources/RemoteAttestation_enclave/: Enclave.cpp  Enclave.edl  Enclave.h  SGXDecent.cpp  SGXRAClient.cpp  SGXRAClient.h  SGXRASP.cpp  SGXRASP.h
sources/common/: AESGCMCommLayer.cpp  AESGCMCommLayer.h  Common.cpp  Common.h  CommonTool.h  CommonType.h  Connection.h  CryptoKeyContainer.cpp  CryptoKeyContainer.h  CryptoTools.cpp  CryptoTools.h  DataCoding.cpp  DataCoding.h  Decent.h  DecentCertContainer.cpp  DecentCertContainer.h  DecentCrypto.cpp  DecentCrypto.h  DecentCryptoManager.cpp  DecentCryptoManager.h  DecentOpenSSL.cpp  DecentOpenSSL.h  DecentRAReport.cpp  DecentRAReport.h  DecentStates.h  DecentTLSCommLayer.cpp  DecentTLSCommLayer.h  EnclaveAsyKeyContainer.cpp  EnclaveAsyKeyContainer.h  EnclaveBase.cpp  EnclaveBase.h  EnclaveRAState.cpp  EnclaveRAState.h  EnclaveUtil.cpp  EnclaveUtil.h  FileSystemUtil.h  GeneralKeyTypes.h  JsonTools.h  MbedTlsHelpers.cpp  MbedTlsHelpers.h  (+27 more)
sources/common/Decent/: CertContainer.cpp  CertContainer.h  Crypto.cpp  Crypto.h  DefaultStatesConfig.h  KeyContainer.cpp  KeyContainer.h  RaReport.cpp  RaReport.h
sources/common/Implementations/: sgx_ra_client_imp.h
sources/common/MbedTls/: MbedTlsHelpers.cpp  MbedTlsHelpers.h  MbedTlsInitializer.cpp  MbedTlsInitializer.h  MbedTlsObjects.cpp  MbedTlsObjects.h  MbedTlsSubFunc.h
sources/common/Net/: AesGcmCommLayer.cpp  AesGcmCommLayer.h  Connection.h  TlsCommLayer.cpp  TlsCommLayer.h
sources/common/Ra/: CertContainer.cpp  CertContainer.h  Crypto.cpp  Crypto.h  KeyContainer.cpp  KeyContainer.h  RaReport.cpp  RaReport.h  States.h
sources/common/SGX/: IasConnector.h  IasReport.cpp  IasReport.h  IasReportCert.h  RaProcessorSp.cpp  RaProcessorSp.h  RaSpCommLayer.cpp  RaSpCommLayer.h  SGXCryptoConversions.cpp  SGXCryptoConversions.h  SGXOpenSSLConversions.cpp  SGXOpenSSLConversions.h  SGXRAServiceProvider.cpp  (+12 more)
sources/common_app/: ClientRASession.cpp  ClientRASession.h  CommSession.cpp  CommSession.h  Common.cpp  Common.h  CryptoKeyContainer.cpp  DecentAppEnclave.h  DecentAppLASession.cpp  DecentAppLASession.h  DecentEnclave.cpp  DecentEnclave.h  DecentRASession.cpp  DecentRASession.h  DecentSGXEnclave.cpp  DecentSGXEnclave.h  DecentSGXRASession.cpp  DecentSGXRASession.h  DecentralizedEnclave.cpp  DecentralizedEnclave.h  DecentralizedMessage.cpp  DecentralizedMessage.h  DecentralizedRASession.cpp  DecentralizedRASession.h  EnclaveBase.cpp  EnclaveBase.h  EnclaveException.cpp  EnclaveException.h  EnclaveMessages.h  EnclaveServiceProviderBase.h  FileSystemDefs.h  FileSystemUtil.cpp  FileSystemUtil.h  JsonTools.cpp  LocalAttestationSession.cpp  LocalAttestationSession.h  MbedTlsHelpers.cpp  MbedTlsSubFunc.cpp  MessageException.h  Messages.cpp  (+26 more)
sources/common_enclave/: Common.cpp  Common.h  DecentCertContainer.h  DecentCrypto.cpp  DecentCrypto.h  DecentCryptoManager.cpp  DecentCryptoManager.h  DecentError.cpp  DecentError.h  EnclaveStatus.cpp  EnclaveStatus.h  JsonTools.cpp  NonceGenerator.cpp  RAConnection.h  RAKeyManager.cpp  RAKeyManager.h  SGXCryptoManager.cpp  SGXCryptoManager.h  SelfRaReportGenerator.cpp  SelfRaReportGenerator.h  common_enclave.edl  decent_app.edl  decent_app_la.edl  decent_enclave.edl  decent_la.edl  decent_tkey_exchange.edl  decentralized_enclave.edl  enclave_tools.h  la_enclave.edl  ra_client_enclave.edl  ra_sp_enclave.edl  sgx_la.edl  sgx_ra_client.edl  sgx_ra_sp.edl  sgx_ra_tools.cpp  sgx_ra_tools.h
sources/example_app/: Enclave_u.c  Enclave_u.h  ExampleEnclave.cpp  ExampleEnclave.h  LibExample.cpp  LibExample.h  Main.cpp
sources/example_enclave/: Enclave.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h
sources/testLib_app/: DecentStates.cpp  LibTestApp.cpp  ModuleConfig.h  VoteAppMessage.cpp  WhiteList.cpp
(+601 files in other folders)
